--- a/style.css
+++ b/style.css
@@ -1,16 +1,34 @@
-double-progress-arc text {
-	font-family: 'serif';
+double-progress-arc h1, h2 {
+	font-family: 'PT Serif';
 }
 
-double-progress-arc text.percentage {
-	font-size: 3em;
+double-progress-arc svg circle {
+	fill: #f4f4f4;
 }
 
-double-progress-arc text.percentage tspan{
-	font-size: 0.5em;
+double-progress-arc svg path.expected {
+	opacity: 0.6;
 }
 
-double-progress-arc text.label {
-	font-size: 1.2em;
-	fill: #888888;
+double-progress-arc div.center {
+	position: absolute;
+	width: 100%;
+	height: 100%;
+ 	text-align: center;
+	padding: 35% 0;
+}
+
+double-progress-arc div.center h1 {
+	font-size: 50px;
+	margin-bottom: 0px;
+}
+
+double-progress-arc div.center h1 span {
+	font-size: 20px;
+}
+
+double-progress-arc div.center h2 {
+	font-size: 20px;
+	margin-top: 0px;
+	color: #898989;
 }
